arrange all resourceses

--- a/finalProjectWebsite/index.html
+++ b/finalProjectWebsite/index.html
@@ -410,7 +410,7 @@
           <div class="ib2">快問快答</div>
         </div>
       </div>
-      <iframe src="../QuestionGame/v/chart/13846" width="100%" height="900px" allowfullscreen="true" frameborder="0"></iframe>
+      <iframe src="../QuestionGame/v/chart/13846.html" width="100%" height="900px" allowfullscreen="true" frameborder="0"></iframe>
       <div style="font-size: 18px;text-align: center;">
         <p>
           謹以感謝以下單位<br>
