Finalize the infovisual web project

--- a/finalProjectWebsite/index.html
+++ b/finalProjectWebsite/index.html
@@ -149,7 +149,7 @@
         主任，結合影音和文字，從全方位定義失智友善社區。<br><br><br>
       </div>
       <div style="width: 100%; text-align: center;">
-        <iframe  style="width: 95vw; height: 95vh" src="https://www.youtube.com/embed/V2um1e-ElT0"  frameborder="0" allowfullscreen ></iframe>
+        <iframe  style="width: 95vw; height: 95vh" src="https://www.youtube.com/embed/FzMb_u6TNyY"  frameborder="0" allowfullscreen ></iframe>
       </div>
       <div id="land-main" class="intro">
               <div id="land-main-hl">
@@ -313,7 +313,7 @@
       </div>
       
       <div style="width: 100%; text-align: center;">  
-        <img src="img/hola/HOLA1.png" style="width: 730px;height: 500px;"><br>
+        <img src="img/hola/HOLA1.jpg" style="width: 730px;height: 500px;"><br>
       </div>
       <div style="text-align: left ;margin-left: 12%;margin-right: 12%;font-size: 24px;line-height: 2.2em;">
         <b>遺忘者與騙子的小鎮—霍格威村</b>
@@ -325,7 +325,7 @@
       </div><br>
 
       <div style="width: 100%; text-align: center;">
-      <img src="img/hola/HOLA2.png" style="width: 730px;height: 500px;"><br>
+      <img src="img/hola/HOLA2.jpg" style="width: 730px;height: 500px;"><br>
       </div>
 
       <div style="text-align: left ;margin-left: 12%;margin-right: 12%;font-size: 24px;line-height: 2.2em;">
@@ -339,7 +339,7 @@
       </div>
 
       <div style="width: 100%; text-align: center;">
-      <img src="img/hola/HOLA3.png" style="width: 730px;height: 500px;"><br>
+      <img src="img/hola/HOLA3.jpg" style="width: 730px;height: 500px;"><br>
       </div>
 
       <div style="text-align: left ;margin-left: 12%;margin-right: 12%;font-size: 24px;;line-height: 2.2em;"><b>大成本小受眾　台灣負擔不起</b></div>
@@ -364,7 +364,7 @@
       </div>
 
       <div style="width: 100%; text-align: center;">
-      <img src="img/future/f1.JPG" style="width: 730px;height: 500px;"><br>
+      <img src="img/future/f1.jpg" style="width: 730px;height: 500px;"><br>
       </div>
 
       <div style="text-align: left ;margin-left: 12%;margin-right: 12%;font-size: 20px;line-height: 2.2em;">
@@ -379,7 +379,7 @@
       </div>
 
       <div style="width: 100%; text-align: center;">
-      <img src="img/future/f2.png" style="width: 730px;height: 500px;"><br>
+      <img src="img/future/f2.jpg" style="width: 730px;height: 500px;"><br>
       </div>
 
       <div style="text-align: left ;margin-left: 12%;margin-right: 12%;font-size: 24px;;line-height: 2.2em;">
@@ -397,7 +397,7 @@
       </div>
 
       <div style="width: 100%; text-align: center;">
-      <img src="img/future/f3.JPG" style="width: 730px;height: 500px;"><br>
+      <img src="img/future/f3.jpg" style="width: 730px;height: 500px;"><br>
       </div>
 
       <div style="text-align: left ;margin-left: 12%;margin-right: 12%;font-size: 20px;line-height: 2.2em;">
